--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+  <head>
+    <title> Ao (Sharon) Xu </title>
+  </head>
   <body>
 Hello there, awesome person!
-    </body>
-  </html>
+  </body>
+</html>
