--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title> Ao (Sharon) Xu </title>
   </head>
   <body>
-Hello there, awesome person!
+    <h1> this is my page </h2>
+         Hello there, awesome person!
   </body>
 </html>
