--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1> Welcome! </h1>
 Hello there, awesome person!
+    <img src="https://octodex.github.com/images/vinyltocat.png">
   </body>
 </html>
