--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> Welcome! </h1>
+    <h1> Ao (Sharon) Xu </h1>
     <ol> 
-      <l1> 1. <a href="https://github.com">This is a link to GitHub!</a> </l1>
-      <l2> 2. <a href="https://www.Linkedin.com/in/ao-sharon-xu">This is a link to my Linkedin page!</a> </l2>
-      <l3> 3. <a href="https://github.com">This is a link to GitHub!</a> </l3>
+       <li> <a href="https://github.com">This is a link to GitHub!</a> </li>
+      <li> <a href="https://www.Linkedin.com/in/ao-sharon-xu">This is a link to my Linkedin page!</a> </li>
+      <li> <a href="https://github.com">This is a link to GitHub!</a> </li>
     </ol>
 Hello there, awesome person!
     <img src="https://octodex.github.com/images/vinyltocat.png">
